   write(), and write_mime() methods of a ProblemReport and apport.Report
   object now require the file stream to be opened in binary mode.
 * data/apport: Ignore a crash if the executable was modified after the process
   started. This often happens if the package is upgraded and a long-running
   process is not stopped before. (LP: #984944)

Bug fixes:
 * apport-gtk: Work around GTK crash when trying to set pixmap on an already
   destroyed parent window. (LP: #938090)
 * data/dump_acpi_tables.py: Fix crash on undefined variable with non-standard
   tables. (LP: #982267)
 * backends/packaging-apt-dpkg.py: Fix crash if a package is installed, but has
   no candidates in apt. (LP: #980094)
 * data/general-hooks/generic.py: Bump minimum free space requirement from 10
   to 50 MB. 10 is not nearly enough particularly for /tmp. (LP: #979928)
 * hookutils.py, recent_logfile(): Use a default limit of 10000 lines and call
   "tail" instead of reading the whole file. This protects against using up all
   memory when there are massive repeated log messages. (LP: #984256)
 * apport-gtk: Do not assume that an icon requested for size 42 actually
   delivers size 42; some themes do not have this available and deliver a
   smaller one instead, causing overflows. Also, copy the image as
   gtk_icon_theme_load_icon() returns a readonly result which we must not
   modify. (LP: #937249)
 * ui.py: Don't show the duplicate warning when the crash database does not
   accept the problem type, and they are just being sent to whoopsie. Thanks
   Evan Dandrea. (LP: #989779)

2.0.1 (2012-04-10)
------------------
Bug fixes:
 * test_ui_gtk.py: Disable package hooks for the tests, as they might ask for
   sudo passwords and other interactive bits, and thus make the tests hang.
 * test_backend_apt_dpkg.py: Fix checks for the installation of -dbgsym
   packages. This should always happen, as the sandboxes have a ddeb apt