@@ -20,6 +20,7 @@ Improvements:
  * data/apport: Ignore a crash if the executable was modified after the process
    started. This often happens if the package is upgraded and a long-running
    process is not stopped before. (LP: #984944)
+ * Add test cases for apport-unpack.
 
 Bug fixes:
  * apport-gtk: Work around GTK crash when trying to set pixmap on an already
